feature: add max width variable

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -5,6 +5,7 @@
 @import './_abstracts/spacing';
 @import './_abstracts/fonts';
 @import './_abstracts/elevations';
+@import './_abstracts/media';
 
 // mixins
 @import './mixins/createAnimations';
