--- a/src/app/ui/components/base/base-input/BaseInput.scss
+++ b/src/app/ui/components/base/base-input/BaseInput.scss
@@ -70,4 +70,9 @@
             @apply cursor-not-allowed select-none pointer-events-none
         }
     }
+
+    &__message {
+        @apply text-xsm font-default text-warning-100;
+        @apply m-none p-none
+    }
 }
