--- a/src/assets/_abstracts/_fonts.scss
+++ b/src/assets/_abstracts/_fonts.scss
@@ -13,6 +13,7 @@
     --font-style-bold: bold;
 
     --font-size-xl: #{px2rem(calc(30))};
+    --font-size-l: #{px2rem(calc(24))};
     --font-size-regular: #{px2rem(calc(16))};
     --font-size-sm: #{px2rem(calc(14))};
     --font-size-xs: #{px2rem(calc(12))};
