feature: create spinner mixin

--- a/src/app/ui/components/base/base-button/BaseButton.scss
+++ b/src/app/ui/components/base/base-button/BaseButton.scss
@@ -45,20 +45,18 @@
         }
 
         &[loading=true] {
+            @include crate-spinner(
+                $position: absolute,
+                $borderColor: var(--color-neutral-100),
+                $borderBColor: var(--color-outline)
+            ){
+                @apply right-xmd
+            };
+
             @apply pr-xxxlg pointer-events-none;
 
             &:not(#{$basebutton}--is-secondary) {
-                @apply bg-logo-500;
-            }
-
-            &::after {
-                @apply w-md aspect-square inline-block content-[''] absolute right-xmd;
-                @apply border-[1px] border-neutral-100 border-solid border-b-logo-600 rounded-[50%];
-                @apply animate-spinner;
-
-                &#{$basebutton}--is-secondary {
-                    @apply border-logo-400 border-b-neutral-300 
-                }
+                @apply bg-logo-400;
             }
         }
     }
