--- a/src/app/ui/components/base/base-input/BaseInput.scss
+++ b/src/app/ui/components/base/base-input/BaseInput.scss
@@ -40,13 +40,14 @@
     }
 
     &[loading=true] {
-        @apply pointer-events-none;
+        @include crate-spinner(
+            $borderColor: var(--color-neutral-100),
+            $borderBColor: var(--color-outline)
+        ){
+            @apply right-xmd
+        };
 
-        &::after {
-            @apply w-md aspect-square inline-block content-[''];
-            @apply border-[1px] border-neutral-100 border-solid border-b-logo-300 rounded-[50%];
-            @apply animate-spinner;
-        }
+        @apply pointer-events-none;
     }
 
     &__field {
