--- a/src/assets/mixins/createUtilities.scss
+++ b/src/assets/mixins/createUtilities.scss
@@ -1,4 +1,9 @@
-@mixin create-contextual-menu($width:16px,  $size: 3px, $color: #000, $hoverColor: #000){
+@mixin create-contextual-menu(
+    $width:16px,
+    $size: 3px,
+    $color: #000,
+    $hoverColor: #000
+){
     @apply bg-default-none border-none p-none outline-none; // reset
     @apply flex flex-col items-center justify-center gap-[3px];
     @apply cursor-pointer rounded-xsm aspect-square;
@@ -36,7 +41,7 @@
         }
     }
 
-    &:focus {
+    &:focus-visible {
         &:not(:hover) {
             @apply shadow-focus
         }
@@ -63,5 +68,64 @@
         border-bottom-color: $borderBColor;
 
         @content
+    }
+}
+
+@mixin create-hamburger-menu(
+    $width: 16px,
+    $color: #000,
+    $activeColor: #000
+) {
+    @apply flex items-center justify-center relative aspect-square;
+    @apply rounded-xxsm;
+    @apply transition-colors duration-[var(--animationTime)] ease-out;
+
+    width: $width;
+
+    > *,
+    &::before,
+    &::after {
+        @apply w-full h-[2px];
+        background: $color;
+    }
+
+    &::before,
+    &::after {
+        @apply absolute content-[''];
+        @apply transition-all duration-[var(--animationTime)] ease-out;
+    }
+
+    &::before {
+        inset: calc(($width / 2) - ($width / 3)) auto auto
+    }
+
+    &::after {
+        inset: auto auto calc(($width / 2) - ($width / 3))
+    }
+
+    &:focus-visible {
+        &:not(:hover) {
+            @apply shadow-focus
+        }
+    }
+
+    &[open=true] {
+        > * {
+            display: none;
+        }
+
+        &::before,
+        &::after {
+            @apply inset-auto;
+            background: $activeColor;
+        }
+
+        &::before {
+            transform: rotate(45deg)
+        }
+
+        &::after {
+            transform: rotate(-45deg)
+        }
     }
 }
