feature: add selected state

--- a/src/app/ui/components/abstracts/component-is/ComponentIs.scss
+++ b/src/app/ui/components/abstracts/component-is/ComponentIs.scss
@@ -1,4 +1,6 @@
 .component-is {
+    @apply p-none;
+
     &:is(button) {
         @apply bg-default-none border-none outline-none select-none; // reset
     }
