fix: solve router-link path to issue

--- a/src/app/ui/components/abstracts/component-is/ComponentIs.scss
+++ b/src/app/ui/components/abstracts/component-is/ComponentIs.scss
@@ -1,7 +1,8 @@
 .component-is {
-    @apply p-none;
+    @apply p-none no-underline;
 
     &:is(button) {
         @apply bg-default-none border-none outline-none select-none; // reset
     }
+    
 }
