feature: create router-views for skeleton and navigation aside

--- a/src/app/ui/components/base/base-input/BaseInput.scss
+++ b/src/app/ui/components/base/base-input/BaseInput.scss
@@ -43,9 +43,7 @@
         @include crate-spinner(
             $borderColor: var(--color-neutral-100),
             $borderBColor: var(--color-outline)
-        ){
-            @apply right-xmd
-        };
+        );
 
         @apply pointer-events-none;
     }
