--- a/src/assets/layers/behaviours.scss
+++ b/src/assets/layers/behaviours.scss
@@ -1,6 +1,14 @@
-#app {
+.app {
   &-layout {
-    @apply h-screen w-screen overflow-auto flex justify-center items-center max-w-max-layout;
+    @apply h-screen w-screen overflow-auto flex flex-col justify-between max-w-max-layout;
     @apply bg-neutral-200 border-r-logo-300 border-solid border-r-[1px];
+
+    @screen tablet-pt {
+      @apply flex-row
+    }
+
+    &__content {
+      @apply flex flex-1 flex-col px-lg pt-sm pb-lg gap-md
+    }
   }
 }
