feature: apply correct padding

--- a/src/app/ui/layouts/partials/router-navigation/RouterNavigation.scss
+++ b/src/app/ui/layouts/partials/router-navigation/RouterNavigation.scss
@@ -1,5 +1,8 @@
 .router-navigation {
     $routernavigation: &;
+    --custom-padding: calc(var(--spacing-30) - 1px);
+
+    @apply pl-[var(--custom-padding)];
 
     &--has {
         &-warning {
