--- a/src/assets/_abstracts/_colors.scss
+++ b/src/assets/_abstracts/_colors.scss
@@ -17,4 +17,6 @@
 
   --color-variant-100: hsla(243, 100%, 69%, 1);
   --color-outline: hsla(295, 73%, 46%, 1);
+  --color-area-100: hsla(173, 80%, 40%, 1);
+  --color-area-200: hsla(217, 91%, 60%, 1);
 }
