--- a/src/app/ui/components/tools/draggable-area/DraggableArea.scss
+++ b/src/app/ui/components/tools/draggable-area/DraggableArea.scss
@@ -1,23 +1,9 @@
 .draggable-area {
     $draggablearea: &;
 
-    @apply flex flex-col gap-md p-md border-[1px] border-background-200 border-solid h-full w-full;
+    @apply flex flex-col gap-xmd p-md border-[1px] border-background-200 border-solid h-full w-full;
     @apply rounded-md bg-neutral-100;
     @apply font-default text-logo-600;
-
-    &__header {
-        @apply flex flex-col gap-sm;
-
-        &:before {
-            @apply h-xsm w-full;
-            @apply bg-default-current rounded-xxsm content-[''];
-        }
-    }
-
-    &__title {
-        @apply m-none px-none py-xsm;
-        @apply font-bold text-md text-logo-600
-    }
 
     &[area='new'] {
         @apply text-success-100
@@ -34,4 +20,24 @@
     &[area='failed'] {
         @apply text-warning-100
     }
+
+    &__header {
+        @apply flex flex-wrap gap-y-sm gap-x-xsm;
+
+        &:before {
+            @apply h-xsm w-full;
+            @apply bg-default-current rounded-xxsm content-[''];
+        }
+    }
+
+    &__title {
+        @apply flex gap-xxsm m-none p-none;
+        @apply font-bold text-md text-logo-600
+    }
+
+    &__active {
+        @apply flex-[2];
+        background: red;
+    }
+
 }
