--- a/src/app/ui/components/tools/draggable-area/DraggableArea.scss
+++ b/src/app/ui/components/tools/draggable-area/DraggableArea.scss
@@ -45,8 +45,7 @@
     }
 
     &__active-zone {
-        @apply flex-[2] m-none p-none;
-        background: yellow;
+        @apply flex flex-col flex-[2] m-none p-none gap-sm overflow-auto;
     }
 
 }
