--- a/src/app/ui/layouts/partials/side-navigation/SideNavigation.scss
+++ b/src/app/ui/layouts/partials/side-navigation/SideNavigation.scss
@@ -1,5 +1,5 @@
-.main-navigation {
-    $mainnavigation: &;
+.side-navigation {
+    $sidenavigation: &;
 
     @screen tablet-pt {
         @apply flex-[16rem] flex-shrink-0 flex-grow-0
