refactor: layout fxing for recruiters menu

--- a/src/app/ui/layouts/partials/router-navigation/RouterNavigation.scss
+++ b/src/app/ui/layouts/partials/router-navigation/RouterNavigation.scss
@@ -9,7 +9,7 @@
     }
 
     &[aria-orientation="horizontal"] {
-        @apply flex-row;
+        @apply flex-row gap-xxxlg;
     }
 
     &--has {
