refactor: move RouterNavigation to tool component folder and rename it to MenuShell

--- a/src/app/ui/components/tools/menu-shell/MenuShell.scss
+++ b/src/app/ui/components/tools/menu-shell/MenuShell.scss
@@ -1,5 +1,5 @@
-.router-navigation {
-    $routernavigation: &;
+.menu-shell {
+    $mennushell: &;
     --custom-padding: calc(var(--spacing-30) - 1px);
 
     @apply flex pl-[var(--custom-padding)];
