feature: add custom style to MenuShell tool

--- a/src/app/ui/components/tools/menu-shell/MenuShell.scss
+++ b/src/app/ui/components/tools/menu-shell/MenuShell.scss
@@ -1,8 +1,6 @@
 .menu-shell {
     $mennushell: &;
-    --custom-padding: calc(var(--spacing-30) - 1px);
-
-    @apply flex p-none m-none;
+    @apply flex p-none;
 
     &[aria-orientation="vertical"] {
         @apply flex-col;
