--- a/src/modules/recruitment/presentation/ui/EntryPoint.scss
+++ b/src/modules/recruitment/presentation/ui/EntryPoint.scss
@@ -1,5 +1,9 @@
 .entry-point {
     $entrypoint: &;
 
-    @apply flex flex-col gap-md
+    @apply flex flex-col gap-md h-full;
+
+    &__board {
+        @apply flex-[2];
+    }
 }
