feature: apply animation board

--- a/src/modules/recruitment/modules/positions/presentation/ui/positions-board/PositionsBoards.scss
+++ b/src/modules/recruitment/modules/positions/presentation/ui/positions-board/PositionsBoards.scss
@@ -2,9 +2,11 @@
     $positionboards: &;
 
     @include create-snap-scroll;
-    @apply flex h-full gap-xmd;
+    @apply flex h-full gap-xmd overflow-y-hidden;
 
     .positions-boards__col {
         @apply flex-[300px] flex-shrink-0 flex-grow-0;
+        @apply opacity-0 animate-slide-from-center;
+        animation-fill-mode: forwards;
     }
 }
